Trello #299 Discourse design tweaks: #20 fix "when you select posts using the wrench, the modal covers the select button for the first post"

--- a/assets/stylesheets/desktop/topic-post.scss
+++ b/assets/stylesheets/desktop/topic-post.scss
@@ -366,6 +366,11 @@ span.post-count {
 }
 
 
+#selected-posts {
+  margin-left: 180px;
+}
+
+
 .topic-post {
   article.boxed {
     line-height: 1.4;
